force-app/main/default/objects/CampaignMember/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>IF(
    NOT(ISBLANK(AccountId)),
    AccountId,
    IF(
        NOT(ISBLANK(Account__c)),
        Account__c,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>