force-app/main/default/objects/CampaignMember/fields/B_rn_under_18_r__c.field-meta.xml
<CustomField>
    <fullName>B_rn_under_18_r__c</fullName>
    <label>Børn under 18 år?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nej</fullName>
            </value>
            <value>
                <fullName>Ja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>