force-app/main/default/objects/CampaignMember/fields/Boligforhold__c.field-meta.xml
<CustomField>
    <fullName>Boligforhold__c</fullName>
    <label>Boligforhold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lejebolig</fullName>
            </value>
            <value>
                <fullName>Andelsbolig</fullName>
            </value>
            <value>
                <fullName>Ejerbolig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>