force-app/main/default/objects/CampaignMember/fields/Booking_cancellation_method__c.field-meta.xml
<CustomField>
    <fullName>Booking_cancellation_method__c</fullName>
    <label>Booking cancellation method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>https://dinfamiliejurist.dk/afmelding-email/</fullName>
            </value>
            <value>
                <fullName>https://dinfamiliejurist.dk/afmelding-sms/</fullName>
            </value>
            <value>
                <fullName>Cancelled by us in Billetto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>