force-app/main/default/objects/CampaignMember/fields/Booking_status__c.field-meta.xml
<CustomField>
    <fullName>Booking_status__c</fullName>
    <label>Booking Status (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>