force-app/main/default/objects/CampaignMember/fields/Booking_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_Formula__c</fullName>
    <formula>IF(
  Walk_In_Attendee__c, 
  &quot;Walk-In&quot;, 
  IF(
    Tickets_in_order__c = 0, 
    &quot;&quot;, 
    IF(
      Remaining_Tickets__c = 0, 
      &quot;Cancelled&quot;, 
      &quot;Booked&quot;
    )
  )
)</formula>
    <inlineHelpText>Determines the status of the booking: If the attendee is a walk-in, it shows &apos;Walk-In&apos;. If no tickets were ordered, it stays blank. If tickets were ordered but none remain, it shows &apos;Cancelled&apos;. If tickets were ordered and at least one remains, it shows &apos;Booked&apos;.</inlineHelpText>
    <label>Booking Status</label>
    <type>Text</type>
</CustomField>