force-app/main/default/objects/CampaignMember/fields/Campaign_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Record_Type_ID__c</fullName>
    <formula>Campaign.RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Record Type ID</label>
    <type>Text</type>
</CustomField>