force-app/main/default/objects/CampaignMember/fields/Cancel_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Tickets__c</fullName>
    <formula>CASE(
    Market_Unit__c,
    &quot;FA_SE&quot;, &quot;https://dinfamiljejurist.se/avboka-forelasning/?id=&quot; &amp;  External_ID__c ,
    &quot;DFJ_DK&quot;, &quot;https://dinfamiliejurist.dk/afmelding/?id=&quot; &amp; External_ID__c ,
    &quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Tickets</label>
    <type>Text</type>
</CustomField>