force-app/main/default/objects/CampaignMember/fields/Cancellation_Link__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Link__c</fullName>
    <formula>&quot;https://dinfamiliejurist.dk/afmelding/?id=&quot;&amp; External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Link</label>
    <type>Text</type>
</CustomField>