force-app/main/default/objects/CampaignMember/fields/Civilstatus__c.field-meta.xml
<CustomField>
    <fullName>Civilstatus__c</fullName>
    <label>Civilstatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Samlevende</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>