force-app/main/default/objects/CampaignMember/fields/Company_Lecture__c.field-meta.xml
<CustomField>
    <fullName>Company_Lecture__c</fullName>
    <formula>Campaign.Company_Lecture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Lecture</label>
    <type>Checkbox</type>
</CustomField>