force-app/main/default/objects/CampaignMember/fields/Current_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Account__c)),
    &quot;Converted&quot;,
    TEXT(Lead.Status)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lead Status</label>
    <type>Text</type>
</CustomField>