force-app/main/default/objects/CampaignMember/fields/Date_of_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_cancellation__c</fullName>
    <label>Date of cancellation</label>
    <type>DateTime</type>
</CustomField>