force-app/main/default/objects/CampaignMember/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Order_Created_Date_Time__c)),
    (Order_Created_Date_Time__c - Campaign.Start__c) * 24 / 24,
    IF(
        NOT(ISBLANK(Lead_Closed_Date_Time__c)),
        (Lead_Closed_Date_Time__c - Campaign.Start__c) * 24 / 24,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>