force-app/main/default/objects/CampaignMember/fields/Days_to_Close_num__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close_num__c</fullName>
    <label>Days to Close #</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>