force-app/main/default/objects/CampaignMember/fields/Days_Until_Lecture__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Lecture__c</fullName>
    <formula>IF(
    ISBLANK(Campaign.Start__c),
    NULL,
    (DATEVALUE(Campaign.Start__c) - DATEVALUE(NOW()))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Lecture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>