force-app/main/default/objects/CampaignMember/fields/Ejendomsoverdragelse__c.field-meta.xml
<CustomField>
    <fullName>Ejendomsoverdragelse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ejendomsoverdragelse</label>
    <type>Checkbox</type>
</CustomField>