force-app/main/default/objects/CampaignMember/fields/Email_Form_Invite_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Form_Invite_Status__c</fullName>
    <label>Email Form Invite Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invite sent</fullName>
            </value>
            <value>
                <fullName>Reply received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>