force-app/main/default/objects/CampaignMember/fields/Email_Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Email_Response_Time_Hours__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Time_of_Email_Form_Reply__c)),
    FLOOR(MOD((Time_of_Email_Form_Reply__c - Time_of_Email_Form_Invite__c) * 24, 24)),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Response Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>