force-app/main/default/objects/CampaignMember/fields/Event_Start__c.field-meta.xml
<CustomField>
    <fullName>Event_Start__c</fullName>
    <formula>Campaign.Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start</label>
    <type>DateTime</type>
</CustomField>