force-app/main/default/objects/CampaignMember/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <label>EventID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>