force-app/main/default/objects/CampaignMember/fields/Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Submission</label>
    <referenceTo>Form_Submission__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>