force-app/main/default/objects/CampaignMember/fields/Formula_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Formula_Close_Date__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Order_Created_Date_Time__c)), 
    Order_Created_Date_Time__c, 
    IF(
        NOT(ISBLANK(Lead_Closed_Date_Time__c)), 
        Lead_Closed_Date_Time__c, 
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Close Date</label>
    <type>DateTime</type>
</CustomField>