force-app/main/default/objects/CampaignMember/fields/Gift_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Gift_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Certificate</label>
    <type>Checkbox</type>
</CustomField>