force-app/main/default/objects/CampaignMember/fields/Har_du_b_rn__c.field-meta.xml
<CustomField>
    <fullName>Har_du_b_rn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du børn?</label>
    <type>Checkbox</type>
</CustomField>