force-app/main/default/objects/CampaignMember/fields/Has_Children_Under_18__c.field-meta.xml
<CustomField>
    <fullName>Has_Children_Under_18__c</fullName>
    <label>Has Children Under 18</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>