force-app/main/default/objects/CampaignMember/fields/Host_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Host_Address_City__c</fullName>
    <formula>Campaign.Host_Address__City__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Address (City)</label>
    <type>Text</type>
</CustomField>