force-app/main/default/objects/CampaignMember/fields/Host_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Host_Address_Street__c</fullName>
    <formula>Campaign.Host_Address__Street__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Address (Street)</label>
    <type>Text</type>
</CustomField>