force-app/main/default/objects/CampaignMember/fields/Host_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Host_Address_Zip_Code__c</fullName>
    <formula>Campaign.Host_Address__PostalCode__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Address (Zip Code)</label>
    <type>Text</type>
</CustomField>