force-app/main/default/objects/CampaignMember/fields/Host_Type__c.field-meta.xml
<CustomField>
    <fullName>Host_Type__c</fullName>
    <formula>Campaign.Host_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Type</label>
    <type>Text</type>
</CustomField>