force-app/main/default/objects/CampaignMember/fields/Is_Email_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Clicked</label>
    <type>Checkbox</type>
</CustomField>