force-app/main/default/objects/CampaignMember/fields/Is_Referred__c.field-meta.xml
<CustomField>
    <fullName>Is_Referred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Referred</label>
    <type>Checkbox</type>
</CustomField>