force-app/main/default/objects/CampaignMember/fields/Is_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Is_Referrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Referrer</label>
    <type>Checkbox</type>
</CustomField>