force-app/main/default/objects/CampaignMember/fields/Is_Unsubscribed_from_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Unsubscribed_from_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unsubscribed from Email</label>
    <type>Checkbox</type>
</CustomField>