force-app/main/default/objects/CampaignMember/fields/Jeg_nsker_en_fremtidsfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>Jeg_nsker_en_fremtidsfuldmagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg ønsker en fremtidsfuldmagt</label>
    <type>Checkbox</type>
</CustomField>