force-app/main/default/objects/CampaignMember/fields/Jeg_nsker_s_reje_til_mine_b_rn__c.field-meta.xml
<CustomField>
    <fullName>Jeg_nsker_s_reje_til_mine_b_rn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg ønsker særeje til mine børn</label>
    <type>Checkbox</type>
</CustomField>