force-app/main/default/objects/CampaignMember/fields/Jeg_vil_selv_styre_arvefordelingen__c.field-meta.xml
<CustomField>
    <fullName>Jeg_vil_selv_styre_arvefordelingen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg vil selv styre arvefordelingen</label>
    <type>Checkbox</type>
</CustomField>