force-app/main/default/objects/CampaignMember/fields/Jeg_vil_sikre_min_gtef_lle_via_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>Jeg_vil_sikre_min_gtef_lle_via_gtepagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg vil sikre min ægtefælle via ægtepagt</label>
    <type>Checkbox</type>
</CustomField>