force-app/main/default/objects/CampaignMember/fields/Latest_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Entry_Date__c</fullName>
    <label>Latest Entry Date</label>
    <type>DateTime</type>
</CustomField>