force-app/main/default/objects/CampaignMember/fields/Lead_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Closed_Date_Time__c</fullName>
    <formula>IF(
    AND(
        Campaign.Related_Event_ID__c = Lead.Related_Event_ID__c,
        NOT(
            OR(
                Current_Lead_Status__c = &quot;New&quot;,
                Current_Lead_Status__c = &quot;Working&quot;
            )
        )
    ),
    Lead.Closed_Date__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>