force-app/main/default/objects/CampaignMember/fields/Lecture_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Comment__c</fullName>
    <label>Lecture Comment</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>