force-app/main/default/objects/CampaignMember/fields/Lecture_Status__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Status__c</fullName>
    <formula>CASE(Campaign.Status,
    &quot;Scheduled&quot;, &quot;Scheduled&quot;,
    &quot;Cancelled&quot;, &quot;Cancelled&quot;,
    &quot;Completed&quot;, &quot;Completed&quot;,
    &quot;In Progress&quot;, &quot;In Progress&quot;,
    &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lecture Status</label>
    <type>Text</type>
</CustomField>