force-app/main/default/objects/CampaignMember/fields/Lecturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lecturer_Name__c</fullName>
    <formula>Campaign.Lecturer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lecturer Name</label>
    <type>Text</type>
</CustomField>