force-app/main/default/objects/CampaignMember/fields/Link_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Link_Clicked__c</fullName>
    <label>Link Clicked</label>
    <type>Url</type>
</CustomField>