force-app/main/default/objects/CampaignMember/fields/Marketing_Cloud_Cancellation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Cancellation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Cloud Cancellation Flag</label>
    <type>Checkbox</type>
</CustomField>