force-app/main/default/objects/CampaignMember/fields/Meeting_Booked_Lead__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Lead__c</fullName>
    <formula>Lead.M_de_booket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booked (Lead)</label>
    <type>Checkbox</type>
</CustomField>