force-app/main/default/objects/CampaignMember/fields/Online_event__c.field-meta.xml
<CustomField>
    <fullName>Online_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online event</label>
    <type>Checkbox</type>
</CustomField>