force-app/main/default/objects/CampaignMember/fields/Order_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Created_Date_Time__c</fullName>
    <formula>IF(
Order__r.Campaign__c  =  CampaignId ,
Order__r.CreatedDate,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Created Date/Time</label>
    <type>DateTime</type>
</CustomField>