force-app/main/default/objects/CampaignMember/fields/Order_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Price__c</fullName>
    <label>Order Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>