force-app/main/default/objects/CampaignMember/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <formula>IF(
     Order__r.Campaign__c  =  CampaignId ,
    Order__r.Order_Price__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Uses the value in &quot;Order Price&quot; on Order</inlineHelpText>
    <label>Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>