force-app/main/default/objects/CampaignMember/fields/OTP_Medium__c.field-meta.xml
<CustomField>
    <fullName>OTP_Medium__c</fullName>
    <label>OTP Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>