force-app/main/default/objects/CampaignMember/fields/Person_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_2_Email__c</fullName>
    <label>Person 2 Email</label>
    <type>Email</type>
</CustomField>