force-app/main/default/objects/CampaignMember/fields/Person_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_2_First_Name__c</fullName>
    <label>Person 2 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>