force-app/main/default/objects/CampaignMember/fields/Person_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_2_Phone__c</fullName>
    <label>Person 2 Phone</label>
    <type>Phone</type>
</CustomField>